# radis

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pypirc  .readthedocs.yml  .travis.yml  13_HITEMP2020.par.bz2  2to3  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  codecov.yml  environment.yml  kernels.ptx  pfdat.txt  pyproject.toml  pytest.ini  radis-fork.pub  register.py  requirements.txt  rst_to_md.py  setup.cfg  setup.py  setuptips.py  spectrum.prof
.devcontainer/: activate.sh  devcontainer.json  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  config.yml  feature_request.md  feature_request.yaml  todo  todo.yaml
.github/workflows/: README.md  ci.yml  deploy.yml  lint.yml  linting.yml  main.yml  pylint.yml  python-package-master.yml  python-package.yml  python-publish-testPypi.yml  python-publish.yml
debugging/Issue 5/: merge_fail.py
docs/: ISSUE_TEMPLATE.md  Makefile  PULL_REQUEST_TEMPLATE.md  api.rst  bibliography.rst  conf.py  description.rst  developer.rst  docs_environment.yml  examples.rst  features.rst  gendocs.sh  index.rst  install.rst  modules.rst  radis.phys.rst  radis.rst  radis.tools.rst  references.rst  requirements.txt  sg_execution_times.rst  spectrum.rst  user.rst
docs/_templates/: buttons.html  layout.html  searchbox.html
docs/db/: constants.rst
docs/dev/: ._github.rst  _architecture.rst  _github_actions.rst  _install.rst  _test.rst  architecture.rst  developer.rst  install.rst  test.rst
docs/examples/: examples.rst  hitran-spectra.rst
docs/features/: databases.rst  description.rst  features.rst  thermo.rst
docs/io/: databases.rst  parsers.rst  thermo.rst
docs/lbl/: _databases.rst  databases.rst  gpu.rst  index.rst  lbl.rst
docs/los/: index.rst  los.rst
docs/online/: online.rst
docs/references/: _bibliography.rst  _constants.rst  bibliography.rst  constants.rst  references.rst  similar_tools.md  similar_tools.rst
docs/source/: radis.io.rst  radis.lbl.rst  radis.los.rst  radis.misc.rst  radis.rst  radis.spectrum.rst  radis.tools.parser.rst  radis.tools.rst
docs/spectrum/: _database.rst  database.rst  howto.rst  index.rst  spectrum.rst
docs/tools/: database.rst  index.rst  line_survey.rst
examples/: README.rst  calc_hitran_full_range.py  calc_matlab.m  calc_spectrumkurucz.py  calculate_partition_functions_from_constants.py  calculate_partition_functions_from_tips.py  calculate_rovibrational_energies.py  calculate_spectrum_using_vaex.py  cite_all_works.py  download_hitemp_database.py  get_molecular_parameters.py  hitemp_h20_calculations.py  new_fitting_Tgas.py  plot_1T_fit.py  plot_SpecDatabase.py  plot_atomic_spectrum.py  plot_blackbody.py  plot_calc_matlab.m.py  plot_chain_spectrum_edition.py  plot_compare_CO_exomol_hitemp.py  plot_compare_CO_geisa_hitran.py  plot_custom_abundances.py  plot_exomol_spectrum.py  plot_experimental_spectrum.py  plot_explore_database_vaex.py  plot_fit_lineshape.py  plot_fitting_method.py  plot_gpu.py  plot_gpu_recalc.py  plot_gpu_widgets.py  plot_hitemp_OH_database.py  plot_hitemp_spectrum.py  plot_hitran_cross_section.py  plot_hitran_full_range.py  plot_kurucz.py  plot_kuruczspec.py  plot_line_survey.py  plot_linestrengths.py  plot_merged_large_spectrum.py  plot_multi_temperature_fit.py  (+9 more)
examples/0_Database_handling/: README.rst  calculate_partition_functions_from_constants.py  calculate_partition_functions_from_tips.py  calculate_rovibrational_energies.py  get_molecular_parameters.py  plot_custom_abundances.py  plot_explore_database_vaex.py  plot_hitran.py  plot_hitran_cross_section.py  plot_linestrengths.py
examples/1_Spectra_handling/: Kurucz_partition_functons_potential_lowering.py  README.rst  calculate_spectrum_using_vaex.py  compare_NO_hitran_geisa.py  custom_Lorentzian_broadening.py  plot_0simpleAtomicSpectrum.py  plot_1partitionFunction_potentialLowering.py  plot_2custom_Lorentzian_broadening.py  plot_Kurucz_partition_functons_potential_lowering.py  plot_blackbody.py  plot_broadening_methods.py  plot_compare_CO_exomol_hitemp.py  plot_compare_CO_geisa_hitran.py  plot_compare_NO_hitran_geisa.py  plot_custom_Lorentzian_broadening.py  plot_exomol_electronic_noneq_spectrum.py  plot_exomol_spectrum.py  plot_full_range.py  plot_hdf5_handling.py  plot_hitemp_OH_database.py  plot_merged_large_spectrum.py  plot_multimolecule.py  plot_nonequilibrium_co_spectrum.py  plot_populations.py
examples/2_Experimental_spectra/: README.rst  plot_chain_spectrum_edition.py  plot_fit_lineshape.py  plot_remove_baseline.py  plot_specutils_processing.py
examples/3_Fitting/: README.rst  plot1_fit_Tgas.py  plot2_fit_Tgas-molfrac.py  plot3_fit_Trot-Tvib-molfrac.py  plot4_legacyFit_Tgas.py  plot5_legacyFit_Trot-Tvib.py  plot6_fit_vs_legacyFit.py  plot_1T_fit.py  plot_multi_temperature_fit.py  plot_newfitting_Tgas-molfrac.py  plot_newfitting_Tgas.py  plot_newfitting_Trot-Tvib-molfrac.py  plot_newfitting_comparison_oldnew.py
examples/4_GPU/: 06_HITEMP2020_small.par  README.rst  fast_parse_gpu.py  fast_parse_numpy.py  llvmlite_simd.py  plot_gpu.py  plot_gpu_recalc.py  plot_gpu_widgets.py
examples/5_MatLab/: README.rst  plot_calc_matlab.m.py
examples/6_Misc/: README.rst  plot_SpecDatabase.py  plot_slit_function.py  plot_styles.py
examples/9_footer/: README.rst
examples/X_First_Example/: first_example.py
radis/: .coverage.Alexs-MacBook-Air-31.local.66773.XJeyFwpx  .coverage.Alexs-MacBook-Air-31.local.66780.XnQNsZVx  __init__.py  config.json  default_radis.json  params.py
radis/api/: __init__.py  atomic_pf_api.py  cache_files.py  cdsdapi.py  dbmanager.py  exomolapi.py  geisaapi.py  hdf5.py  hitempapi.py  hitranapi.py  kuruczapi.py  nistapi.py  tools.py
radis/cython/: __init__.py  cpu_gpu_agnostic.pxd  radis_cython_extensions.cpp  radis_cython_extensions.pyx  radis_cython_gpu.cpp  radis_cython_gpu.pyx
radis/db/: NIST_Atomic_Ionization_Energies.txt  NIST_iE.txt  __init__.py  classes.py  conventions.py  degeneracies.py  hitemp_co2.py  kuruczpartfn.txt  molecules.py  molparam.py  molparam.txt  molparams_extra.json  offset_arr.npy  (+4 more)
(+311 files in other folders)
